--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,9 @@
     
     {% include blobs.html %}
     
-<!--    <script src="/js/.js"></script>-->
+    <script src="/js/live.js"></script>
+    <script src="/js/banner.js"></script>
+    <script src="/js/banner2.js"></script>
 
   </body>
 
