--- a/css/main.scss
+++ b/css/main.scss
@@ -53,5 +53,6 @@ $hamburger-spacing: $blob-diameter * 0.15;
     "home-list",
     "blobs",
     "buttons",
+    "slider",
     "syntax-highlighting"
 ;
