--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
     
     <script src="/js/live.js"></script>
     <script src="/js/banner.js"></script>
-    <script src="/js/banner2.js"></script>
+    <!-- <script src="/js/banner2.js"></script> -->
 
   </body>
 
