--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
 </header>
 
 <canvas id="banner"></canvas>
-<svg id="banner2"></svg>
+<!-- <svg id="banner2"></svg> -->
 
 <div class="slider-container">
   <input type="range" min="1" max="100" value="50" class="slider" id="my_slider">
