--- a/_sass/_home-list.scss
+++ b/_sass/_home-list.scss
@@ -2,7 +2,7 @@
  * Home
  */
 .page-content-margin {
-    margin-top: $site-banner-height;
+    margin-top: 48vh;
     height: 1em;
     position: relative;
     background: white;
@@ -27,14 +27,16 @@
         
         .post-list-item-wrapper {
             display: inline-block;
-            margin: 0 auto;
+            margin-top: -$post-list-item-content-height/2;
+            margin-left: -$post-list-item-content-width/2;
             width: $post-list-item-content-width;
             height: $post-list-item-content-height;
+            box-sizing : border-box;
             border: $post-list-item-content-border solid rgba(0,0,0,0);
             border-radius: 1.5em;
             position: absolute;
             top: 50%;
-            transform: translate(-50%, -50%);
+            left: 50%;
             background: white;
             background-clip: padding-box;
             box-shadow: 0 0 0 10000px white;
