--- a/css/main.scss
+++ b/css/main.scss
@@ -3,56 +3,32 @@
 ---
 @charset "utf-8";
 
+@font-face {
+  font-family: Quattrocento Sans;
+  src: url(/fonts/QuattrocentoSans-Regular.ttf);
+}
+
 // Our variables
-$base-font-family: Verdana, Arial, sans-serif;
-$base-font-size: 1rem;
-$small-font-size: 0.85rem;
-$base-font-weight: 500;
-$base-line-height: 1.5;
 
-$text-color: #000;
-$brand-color: #222;
-
-$site-banner-height: 28rem;
-
-$post-list-item-height: 22rem;
-$post-list-item-content-width: 75%;
-$post-list-item-content-height: 16rem;
-$post-list-item-content-border: 0.5rem;
-
-$menu-items: 4;
-$blob-scale: 1;
-$blob-open-distance: 5.5rem * $blob-scale;
-$blob-diameter: 4rem * $blob-scale;
-$blob-radius: $blob-diameter / 2;
-$blob-font-size: $blob-diameter * 0.4;
-$blob-color: DeepSkyBlue;
-$menu-trigger-scale-normal: 1.1;
-$menu-trigger-scale-hover: 1.2;
-$menu-trigger-scale-checked: 0.8;
-$hamburger-width: $blob-diameter * 0.4;
-$hamburger-height: $blob-diameter * 0.05;
-$hamburger-spacing: $blob-diameter * 0.15;
 
 
 // Use media queries like this:
 // @include media-query($on-palm) {
-    
+  
 // }
 @mixin media-query($device) {
-    @media screen and (max-width: $device) {
-        @content;
-    }
+  @media screen and (max-width: $device) {
+    @content;
+  }
 }
 
 
 // Import partials from `sass_dir` (default as `_sass`)
 @import
-    "base",
-    "layout",
-    "home-list",
-    "blobs",
-    "buttons",
-    "slider",
-    "syntax-highlighting"
+  // "layout",
+  // "syntax-highlighting"
+  "component",
+  "demo",
+  "icons",
+  "normalize"
 ;
