--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,14 +13,11 @@ layout: default
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header">
-    <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
+    <h1 class="post-title" itemprop="headline">{{ page.title }}</h1>
     <p class="post-meta">
       <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%B %dth - %Y" }}</time>
-      
-      <span itemprop="author" itemscope itemtype="http://schema.org/Person">
-        <span class="post-author" itemprop="name">by: {{ site.author }}</span>
-      </span>
-      </p>
+      <span class="post-author" itemprop="author" itemscope itemtype="http://schema.org/Person">by: {{ site.author }}</span>
+    </p>
   </header>
 
   <div class="post-content" itemprop="articleBody">
