--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,3 +1,10 @@
 ---
 layout: default
 ---
+<div id="main-frame">
+
+  
+  
+</div><!-- /main-frame -->
+
+<script src="/js/sidebarEffect.js"></script>
