--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/css/fa/fontawesome-all.min.css">
   
-  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.subpath | prepend: site.url }}">
+  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.subpath | prepend: site.url }}">
+  
+  <script src="/js/jquery-3.2.1.min.js"></script>
+  <script src="/js/live.js"></script>
 </head>
