--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,13 @@ layout: default
 ---
 <div id="main-frame">
 
+  <div id="nav-bar">
+    
+  </div>
   
+  <div id="front-content">
+    
+  </div>
   
 </div><!-- /main-frame -->
 
