--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,9 +3,9 @@ layout: default
 ---
 <div id="main-frame">
 
-  <div id="nav-bar">
+  <nav id="nav-bar">
     
-  </div>
+  </nav>
   
   <div id="front-content">
     
