--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,4 +1,16 @@
 ---
 layout: default
 ---
+<div id="main-frame">
 
+  <nav id="nav-bar">
+    
+  </nav>
+  
+  <div id="front-content">
+    
+  </div>
+  
+</div><!-- /main-frame -->
+
+<script src="/js/sidebarEffect.js"></script>
