--- a/_sass/sidebar.scss
+++ b/_sass/sidebar.scss
@@ -1,19 +1,12 @@
-@font-face {
-  font-family: Quattrocento Sans;
-  src: url(/fonts/QuattrocentoSans-Regular.ttf); }
-body {
-  margin: 0;
-  padding: 0;
-  min-height: 100vh;
-  background-color: #444; }
 
 #main-frame {
   width: 100%;
   height: 100vh;
   position: relative;
   overflow: hidden;
-  z-index: 0; }
-  #main-frame #nav-bar {
+  z-index: 0;
+  
+  #nav-bar {
     margin-top: 10vh;
     margin-left: 3rem;
     width: 20%;
@@ -23,8 +16,10 @@ body {
     top: 0;
     left: 20%;
     transition: all 800ms ease-out;
-    z-index: 5; }
-  #main-frame #front-content {
+    z-index: 5;
+  }
+  
+  #front-content {
     width: 100%;
     height: 100vh;
     background-color: #222;
@@ -32,4 +27,7 @@ body {
     top: 0;
     left: 0%;
     transition: all 800ms ease-out;
-    z-index: 10; }
+    z-index: 10;
+  }
+}
+
