--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,26 +7,25 @@ layout: default
     
   </nav>
   
-  <div id="front-content">
-    <span class="left-side">
+  <ol id="front-content">
+    <li class="left-side">
     
       <div id="tag-pool">
-        <ol>
-          <li>Mod</li>
-          <li>Tool</li>
-        </ol>
+        <!-- <ol> -->
+          <!-- <li>Mod</li> -->
+          <!-- <li>Tool</li> -->
+        <!-- </ol> -->
       </div>
       
-    </span>
-    
-    <span class="right-side">
+    </li><!--
+    --><li class="right-side">
     
       <div id="show-case">
         
       </div>
       
-    </span>
-  </div>
+    </li>
+  </ol>
   
 </div><!-- /main-frame -->
 
