--- a/_sass/sidebar.scss
+++ b/_sass/sidebar.scss
@@ -14,6 +14,7 @@ body {
     margin-top: 10vh;
     margin-left: 3rem;
     width: 20%;
+    min-height: 80vh;
     max-height: 100vw * 9 / 16 * 0.8;
     background-color: #555;
     position: absolute;
