--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,8 +7,8 @@ layout: default
     
   </nav>
   
-  <ol id="front-content">
-    <li class="left-side">
+  <div id="front-content">
+    <div class="left-side">
     
       <div id="tag-pool">
         <!-- <ol> -->
@@ -17,15 +17,15 @@ layout: default
         <!-- </ol> -->
       </div>
       
-    </li><!--
-    --><li class="right-side">
+    </div><!--
+    --><div class="right-side">
     
       <div id="show-case">
         
       </div>
       
-    </li>
-  </ol>
+    </div>
+  </div>
   
 </div><!-- /main-frame -->
 
