--- a/_sass/sidebar.scss
+++ b/_sass/sidebar.scss
@@ -26,9 +26,9 @@ body {
     
   }
   
-  #front-content {
+  #board-slider {
     width: 100%;
-    min-height: 100vw * 9 / 16;
+    height: 100%;;
     background-color: #222;
     position: absolute;
     top: 0;
@@ -36,7 +36,19 @@ body {
     transition: all 800ms ease-out;
     z-index: 10;
     
-    
+    #board-content {
+      width: 80%;
+      height: 100%;;
+      transition: transform 800ms ease-out;
+      
+      #tag-pool {
+        width: 50%;
+        height: auto;
+        position: absolute;
+        top: 40%;
+        left: 0%;
+      }
+    }
   }
 }
 
