--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,8 @@
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
   <link rel="stylesheet" href="/css/main.css">
-  <link rel="stylesheet" href="/css/fa/fontawesome-all.min.css">
+  <!-- <link rel="stylesheet" href="/css/fa/fontawesome-all.min.css"> -->
+  <link rel="stylesheet" href="/css/vicons/vicons-font.css">
   
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.subpath | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.subpath | prepend: site.url }}">
