--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,31 +7,34 @@ layout: default
     
   </nav>
   
-  <div id="front-content">
+  <div id="board-slider">
+    <div id="board-content">
 
-    <div id="tag-pool">
-      <li class="tag-item">
-        <button class="tag-item-button">
-          <i class="tag-item-icon icon icon-reply"></i>
-        </button>
-        <div class="tag-item-bounce"></div>
-      </li>
-      <li class="tag-item">
-        <button class="tag-item-button">
-          <i class="tag-item-icon icon icon-box"></i>
-        </button>
-        <div class="tag-item-bounce"></div>
-      </li>
-      <li class="tag-item">
-        <button class="tag-item-button">
-          <i class="tag-item-icon icon icon-trash"></i>
-        </button>
-        <div class="tag-item-bounce"></div>
-      </li>
+      <div id="tag-pool">
+        <ul id="tag-items">
+          <li class="tag-item">
+            <button class="tag-item-button">
+              <i class="tag-item-icon icon icon-reply"></i>
+            </button>
+          </li>
+          <li class="tag-item">
+            <button class="tag-item-button">
+              <i class="tag-item-icon icon icon-box"></i>
+            </button>
+          </li>
+          <li class="tag-item">
+            <button class="tag-item-button">
+              <i class="tag-item-icon icon icon-trash"></i>
+            </button>
+          </li>
+        </ul>
+      </div>
+      
     </div>
-    
   </div>
   
 </div><!-- /main-frame -->
 
-<script src="/js/sidebarEffect.js"></script>
+<!--<script src="/js/TweenMax.min.js"></script>-->
+<script src="/js/effect_sidebar.js"></script>
+<script src="/js/effect_tags.js"></script>
