--- a/_sass/items_tag.scss
+++ b/_sass/items_tag.scss
@@ -11,8 +11,8 @@
 
 .tag-item-button {
   color: #fff;
-  width: 3rem;
-  height: 3rem;
+  width: $tag-button-height;
+  height: $tag-button-height;
   background: #f59393;
   border: none;
   border-radius: 0.5rem;
