--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,8 +6,8 @@
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.author }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-  <link rel="stylesheet" href="/fonts/main.css">
-  <!-- <link rel="stylesheet" href="/css/fa/fontawesome-all.min.css"> -->
+  <link rel="stylesheet" href="css/main.css">
+  <!-- <link rel="stylesheet" href="/fonts/fa/fontawesome-all.min.css"> -->
   <link rel="stylesheet" href="/fonts/vicons/vicons-font.css">
   
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.subpath | prepend: site.url }}">
