--- a/_sass/sidebar.scss
+++ b/_sass/sidebar.scss
@@ -28,11 +28,11 @@ body {
   
   #board-slider {
     width: 100%;
-    height: 100%;;
+    height: 100%;
     background-color: #222;
     position: absolute;
     top: 0;
-    left: 0%;
+    left: 0;
     transition: all 800ms ease-out;
     z-index: 10;
     
@@ -47,8 +47,8 @@ body {
         height: auto;
         border-right: medium solid grey;
         position: absolute;
-        top: 40%;
-        left: 0%;
+        top: 50vh;
+        left: 0;
       }
     }
   }
