--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,7 +11,7 @@ layout: default
     <div id="board-content">
 
       <div id="tag-pool">
-        <ul id="tag-items">
+        <ul id="tag-list">
           <li class="tag-item">
             <button class="tag-item-button">
               <i class="tag-item-icon icon icon-reply"></i>
