--- a/_sass/shared.scss
+++ b/_sass/shared.scss
@@ -7,11 +7,11 @@
 }
 
 body {
-  color: #48a770;
+  color: map-get($fontColor, body);
   margin: 0;
   padding: 0;
   min-height: 100vh;
-  background-color: #444;
+  background-color: map-get($bgColor, body);
 }
 
 div, ol, ul, li {
