--- a/_sass/sidebar.scss
+++ b/_sass/sidebar.scss
@@ -16,7 +16,7 @@ body {
     width: 20%;
     min-height: 80vh;
     max-height: 100vw * 9 / 16 * 0.8;
-    background-color: #555;
+    background-color: map-get($bgColor, nav);
     position: absolute;
     top: 0;
     left: 20%;
@@ -29,7 +29,7 @@ body {
   #board-slider {
     width: 100%;
     height: 100%;
-    background-color: #222;
+    background-color: map-get($bgColor, slider);
     position: absolute;
     top: 0;
     left: 0;
