--- a/css/main.scss
+++ b/css/main.scss
@@ -24,6 +24,7 @@ $bgColor: (
   body: #444,
   nav: #555,
   slider: #222,
+  slider-alter: #333,
   
   tag-button: transparent,
   tag-button-actual: #f59393,
