--- a/css/main.scss
+++ b/css/main.scss
@@ -31,9 +31,9 @@ $bgColor: (
   tag-button-hover: #fff
 );
 
-$tag-button-width: 3rem;
-$tag-button-height: 3rem;
-$tag-button-font-size: 1rem;
+$tag-item-width: 3rem;
+$tag-item-height: 3rem;
+$tag-item-font-size: 1rem;
 
 
 // Example of including mixin:
