--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,19 +13,12 @@ layout: default
       <div id="tag-pool">
         <ul id="tag-list">
           <li class="tag-item">
-            <button class="tag-item-button">
-              <i class="tag-item-icon icon icon-reply"></i>
-            </button>
+            <input type="checkbox" class="tag-item-input" id="tag-all"></input>
+            <label for="tag-all">*</label>
           </li>
           <li class="tag-item">
-            <button class="tag-item-button">
-              <i class="tag-item-icon icon icon-box"></i>
-            </button>
-          </li>
-          <li class="tag-item">
-            <button class="tag-item-button">
-              <i class="tag-item-icon icon icon-trash"></i>
-            </button>
+            <input type="checkbox" class="tag-item-input" id="tag-Maxscript"></input>
+            <label for="tag-Maxscript">Maxscript</label>
           </li>
         </ul>
       </div>
