--- a/_sass/items_tag.scss
+++ b/_sass/items_tag.scss
@@ -9,11 +9,23 @@
   background-size: 100% 100%;
   animation: 600ms ease-out 800ms 1 bgSlideIn;
   overflow: hidden;
+  
+  label {
+    font-family: Lato;
+    font-size: $tag-item-font-size;
+    line-height: $tag-item-height;
+    color: map-get($fontColor, tag-button);
+    padding: 0 1rem;
+    
+    &:hover {
+      color: map-get($fontColor, tag-button-hover);
+    }
+  }
 }
 
 @keyframes bgSlideIn {
   0% {
-    background-position: ($tag-item-width * 3 + 0.5rem * 3) 0;
+    background-position: 100% 0;
   }
   100% {
     background-position: 0 0;
@@ -23,28 +35,21 @@
 .tag-item {
   display: inline-block;
   float: right;
-  margin-right: 0.5rem;
-  width: $tag-item-width;
-  height: $tag-item-height;
-  position: relative;
-  box-shadow: 0 0 0 0.5rem map-get($bgColor, slider);
-  transition: box-shadow 800ms ease-out;
-}
-
-.tag-item-button {
-  font-size: $tag-item-font-size;
-  color: map-get($fontColor, tag-button);
-  width: 100%;
-  height: 100%;
+  margin-right: 0.6rem;
+  width: auto;
+  height: auto;
   background-color: map-get($bgColor, tag-button);
-  border: none;
   border-radius: 0.5rem;
-  box-shadow: 0 0 0 0.5rem map-get($bgColor, slider);
+  box-shadow: 0 0 0 0.6rem map-get($bgColor, slider);
+  position: relative;
   transition: box-shadow 800ms ease-out;
 
   &:hover {
-    color: map-get($fontColor, tag-button-hover);
     background-color: map-get($bgColor, tag-button-hover);
+  }
+  
+  .tag-item-input {
+    display: none;
   }
 }
 
