--- a/css/main.scss
+++ b/css/main.scss
@@ -26,8 +26,7 @@ $bgColor: (
   slider: #222,
   slider-alter: #333,
   
-  tag-button: transparent,
-  tag-button-actual: #f59393,
+  tag-button: #f59393,
   tag-button-hover: #fff
 );
 
