--- a/_sass/sidebar.scss
+++ b/_sass/sidebar.scss
@@ -38,6 +38,7 @@ body {
     #board-content {
       width: 80%;
       height: 100%;
+      background-color: transparent;
       position: relative;
       transition: transform 800ms ease-out;
       
