--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,9 +25,11 @@ layout: default
       
     </div>
   </div>
-  
+
+  <div id="construct-helper-slider"></div>
+
 </div><!-- /main-frame -->
 
-<!--<script src="/js/TweenMax.min.js"></script>-->
+<!--<script src="/library/TweenMax.min.js"></script>-->
 <script src="/js/effect_sidebar.js"></script>
 <script src="/js/effect_tags.js"></script>
