--- a/_sass/sidebar.scss
+++ b/_sass/sidebar.scss
@@ -52,3 +52,12 @@ body {
   }
 }
 
+#construct-helper-slider {
+  width: 50vw;
+  height: 3rem;
+  position: fixed;
+  top: 0;
+  left: 50vw;
+  z-index: 100;
+}
+
