--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,7 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.subpath | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.subpath | prepend: site.url }}">
   
-  <script src="/js/jquery-3.2.1.min.js"></script>
+  <script src="/library/jquery-3.2.1.min.js"></script>
+  <script src="/library/jquery-ui-1.12.1/jquery-ui.js"></script>
   <script src="/js/live.js"></script>
 </head>
