--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,7 @@
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="/library/jquery-ui-1.12.1/jquery-ui.css">
   <!-- <link rel="stylesheet" href="/fonts/fa/fontawesome-all.min.css"> -->
   <link rel="stylesheet" href="/fonts/vicons/vicons-font.css">
   
