--- a/_sass/sidebar.scss
+++ b/_sass/sidebar.scss
@@ -61,3 +61,12 @@ body {
   z-index: 100;
 }
 
+.TTT {
+  width: 1rem;
+  height: 1rem;
+  background-color: cyan; 
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+}
