--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,8 +28,11 @@ layout: default
 
 </div><!-- /main-frame -->
 
-<div id="construct-helper-slider"></div>
-<div class="TTT"></div>
+<!--helpers-->
+<div class="helper helper-slider" id="helper-slider1"></div>
+<div class="helper helper-TTT"></div>
+<!--helpers-->
+
 <!--<script src="/library/TweenMax.min.js"></script>-->
 <script src="/js/effect_sidebar.js"></script>
 <script src="/js/effect_tags.js"></script>
