--- a/_sass/items_tag.scss
+++ b/_sass/items_tag.scss
@@ -13,6 +13,11 @@
   margin-right: 0.6rem;
   width: auto;
   height: auto;
+  background-image: linear-gradient(to right, #f59393, #f59393);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+  background-position: 0 0;
   border-radius: 0.5rem;
   position: relative;
 
