--- a/css/main.scss
+++ b/css/main.scss
@@ -47,6 +47,7 @@ $tag-item-font-size: 1.2rem;
 
 // Import partials from `sass_dir` (default as `_sass`)
 @import
+  "helpers",
   "shared",
   "sidebar",
   "items_tag"
