--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,14 +7,9 @@
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
   <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="/library/jquery-ui-1.12.1/jquery-ui.css">
-  <!-- <link rel="stylesheet" href="/fonts/fa/fontawesome-all.min.css"> -->
-  <link rel="stylesheet" href="/fonts/vicons/vicons-font.css">
   
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.subpath | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.subpath | prepend: site.url }}">
   
-  <script src="/library/jquery-3.2.1.min.js"></script>
-  <script src="/library/jquery-ui-1.12.1/jquery-ui.js"></script>
-  <script src="/js/live.js"></script>
+  {% include library.html %}
 </head>
