--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,11 +28,11 @@ layout: default
 
 </div><!-- /main-frame -->
 
-<!--helpers-->
-<div class="helper helper-slider" id="helper-slider1"></div>
-<div class="helper helper-TTT"></div>
-<!--helpers-->
+{% include helpers.html %}
 
-<!--<script src="/library/TweenMax.min.js"></script>-->
+
+<script src="/js/live.js"></script>
+<script src="/js/helpers.js"></script>
+
 <script src="/js/effect_sidebar.js"></script>
 <script src="/js/effect_tags.js"></script>
