--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,8 +17,24 @@ layout: default
             <label for="tag-all">*</label>
           </li>
           <li class="tag-item">
-            <input type="checkbox" class="tag-item-input" id="tag-Maxscript"></input>
-            <label for="tag-Maxscript">Maxscript</label>
+            <input type="checkbox" class="tag-item-input" id="tag-maxscript"></input>
+            <label for="tag-maxscript">Maxscript</label>
+          </li>
+          <li class="tag-item">
+            <input type="checkbox" class="tag-item-input" id="tag-gmod"></input>
+            <label for="tag-gmod">Garry's Mod</label>
+          </li>
+          <li class="tag-item">
+            <input type="checkbox" class="tag-item-input" id="tag-extension"></input>
+            <label for="tag-extension">Chrome Extension</label>
+          </li>
+          <li class="tag-item">
+            <input type="checkbox" class="tag-item-input" id="tag-life"></input>
+            <label for="tag-life">Life</label>
+          </li>
+          <li class="tag-item">
+            <input type="checkbox" class="tag-item-input" id="tag-tutorial"></input>
+            <label for="tag-tutorial">Tutorial</label>
           </li>
         </ul>
       </div>
@@ -30,9 +46,6 @@ layout: default
 
 {% include helpers.html %}
 
-
-<script src="/js/live.js"></script>
-<script src="/js/helpers.js"></script>
 
 <script src="/js/effect_sidebar.js"></script>
 <script src="/js/effect_tags.js"></script>
