--- a/_sass/items_tag.scss
+++ b/_sass/items_tag.scss
@@ -3,6 +3,7 @@
   list-style-type: none;
   float: right;
   width: auto;
+  max-width: 65%;
   height: auto;
   overflow: hidden;
 }
@@ -11,18 +12,20 @@
   display: inline-block;
   float: right;
   margin-right: 0.6rem;
+  margin-bottom: 0.6rem;
   width: auto;
   height: auto;
-  background-image: linear-gradient(to right, #f59393, #f59393);
+  background-image: linear-gradient(to right, map-get($bgColor, tag-button), map-get($bgColor, tag-button));
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100% 100%;
-  background-position: 0 0;
+  background-position: 60vw 0;
   border-radius: 0.5rem;
   position: relative;
+  transition: background-position 800ms ease-out;
 
   &:hover {
-    background-color: map-get($bgColor, tag-button-hover);
+    background-image: linear-gradient(to right, map-get($bgColor, tag-button-hover), map-get($bgColor, tag-button-hover));
     label {
       color: map-get($fontColor, tag-button-hover);
     }
@@ -34,6 +37,7 @@
   
   label {
     font-family: Lato;
+    text-transform: uppercase;
     font-size: $tag-item-font-size;
     line-height: $tag-item-height;
     color: map-get($fontColor, tag-button);
