--- a/_sass/sidebar.scss
+++ b/_sass/sidebar.scss
@@ -43,7 +43,7 @@ body {
       #tag-pool {
         width: 50%;
         height: auto;
-        border-right: medium solid grey;
+        border-right: medium solid #666;
         position: absolute;
         top: 50%;
         left: 0;
