--- a/_sass/items_tag.scss
+++ b/_sass/items_tag.scss
@@ -15,7 +15,7 @@
   margin-bottom: 0.6rem;
   width: auto;
   height: auto;
-  background-image: linear-gradient(to right, map-get($bgColor, tag-button), map-get($bgColor, tag-button));
+  background-image: linear-gradient(140deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100% 100%;
