--- a/_sass/shared.scss
+++ b/_sass/shared.scss
@@ -7,11 +7,11 @@
 }
 
 body {
-  color: map-get($fontColor, body);
+  color: fontColor(body);
   margin: 0;
   padding: 0;
   min-height: 100vh;
-  background-color: map-get($bgColor, body);
+  background-color: bgColor(body);
 }
 
 div, ol, ul, li {
