--- a/_sass/sidebar.scss
+++ b/_sass/sidebar.scss
@@ -5,19 +5,19 @@ body {
 
 #main-frame {
   width: 100%;
-  min-height: 100vh;
+  height: 100vh;
   position: relative;
   overflow: hidden;
   z-index: 0;
   
   #nav-bar {
     margin-top: 10vh;
-    margin-left: 3rem;
-    width: map-get($elementSize, nav-width);
-    min-height: 80%;
-    background-color: map-get($bgColor, nav);
+    margin-left: 2.5%;
+    width: elementSize(nav-width);
+    min-height: elementSize(nav-height);
+    background-color: bgColor(nav);
     position: absolute;
-    left: map-get($elementSize, nav-width);
+    left: elementSize(nav-width);
     transition: transform 800ms ease-out;
     z-index: 5;
     
@@ -27,7 +27,7 @@ body {
   #board-slider {
     width: 100%;
     height: 100%;
-    background-color: map-get($bgColor, slider);
+    background-color: bgColor(slider);
     position: absolute;
     transition: all 800ms ease-out;
     z-index: 10;
