--- a/css/main.scss
+++ b/css/main.scss
@@ -32,6 +32,7 @@ $bgColor: (
   slider: #222,
   slider-alter: #333,
   
+  tag-button-before: linear-gradient(to right, #333 0%, transparent 5%),
   tag-button: linear-gradient(145deg, #0fb8ad 0%, #1fc8db 50%, #2cb5e8 75%),
   tag-button-hover: linear-gradient(to right, #fff, #fff)
 );
