--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -45,5 +45,4 @@ layout: default
 </div><!-- /main-frame -->
 
 
-<script src="/js/effect_sidebar.js"></script>
-<script src="/js/effect_tags.js"></script>
+<script src="/js/sidebar.js"></script>
