--- a/_sass/items_tag.scss
+++ b/_sass/items_tag.scss
@@ -17,7 +17,7 @@
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100% 100%;
-  background-position: 40vw 0;  // depends on tag-pool-width
+  background-position: 40vw 0;
   border-radius: 0.5rem;
   position: relative;
   transition: all 800ms ease-out;
@@ -40,6 +40,7 @@
     line-height: elementSize(tag-item-line);
     color: fontColor(tag-button);
     padding: 0 1rem;
+    transition: all 200ms ease-out;
   }
 }
 
