--- a/css/main.scss
+++ b/css/main.scss
@@ -19,7 +19,7 @@ $elementSize: (
   nav-width: percentage($sideWidth),
   nav-height: 80%,
   board-content-width: percentage(1 - $sideWidth),
-  tag-pool-width: 40%,
+  tag-pool-width: 40%,  // change tag-item background-position also
   tag-list-width: 90%,
   tag-item-font: 1.1rem,
   tag-item-line: 2.2
@@ -34,7 +34,7 @@ $bgColor: (
   body: #444,
   nav: #555,
   slider: #222,
-  slider-alter: #333,
+  slider-alter: #333, // backgrounds of tag-button and board-slider depend on
   tag-button-before: linear-gradient(to right, #333 0%, transparent 5%),
   tag-button: linear-gradient(145deg, #0fb8ad 0%, #1fc8db 50%, #2cb5e8 75%),
   tag-button-hover: linear-gradient(to right, #fff, #fff)
