--- a/css/main.scss
+++ b/css/main.scss
@@ -14,12 +14,15 @@
 }
 
 // Our variables
+$durationMulti: 1;
+
 $sideWidth: 0.2;
+$poolWidth: 0.4;
 $elementSize: (
   nav-width: percentage($sideWidth),
   nav-height: 80%,
   board-content-width: percentage(1 - $sideWidth),
-  tag-pool-width: 40%,  // change tag-item background-position also
+  tag-pool-width: percentage($poolWidth),
   tag-list-width: 90%,
   tag-item-font: 1.1rem,
   tag-item-line: 2.2
