--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,11 @@ layout: default
 ---
 <div id="main-frame">
 
-  <nav id="nav-bar">
+  <nav id="nav-slider">
+  
+    <menu id="nav-menu">
+      
+    </menu>
     
   </nav>
   
