--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -29,8 +29,8 @@ layout: default
             <label for="tag-gmod">Garry's Mod</label>
           </li>
           <li class="tag-item">
-            <input type="checkbox" class="tag-item-input" id="tag-extension"></input>
-            <label for="tag-extension">Chrome Extension</label>
+            <input type="checkbox" class="tag-item-input" id="tag-chrome"></input>
+            <label for="tag-chrome">Chrome Extension</label>
           </li>
           <li class="tag-item">
             <input type="checkbox" class="tag-item-input" id="tag-life"></input>
@@ -46,7 +46,7 @@ layout: default
     </div>
   </div>
 
-</div><!-- /main-frame -->
+</div>
 
 
 <script src="/js/sidebar.js"></script>
