--- a/_sass/items_tag.scss
+++ b/_sass/items_tag.scss
@@ -13,7 +13,7 @@
   margin-bottom: 0.6rem;
   width: auto;
   height: auto;
-  background-image: bgColor(tag-button-before), bgColor(tag-button);
+  background-image: bgColor(tag-button-layer1), bgColor(tag-button-layer2);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100% 100%;
