--- a/_sass/shared.scss
+++ b/_sass/shared.scss
@@ -14,7 +14,7 @@ body {
   background-color: bgColor(body);
 }
 
-div, menu, ol, ul, li {
+div, nav, menu, ol, ul, li {
   margin: 0;
   padding: 0;
 }
