--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -43,6 +43,11 @@ layout: default
         </ul>
       </div>
       
+      <div id="displayer">
+        <article class="displayer-article">
+        </article>
+      </div>
+      
     </div>
   </div>
 
