--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -43,9 +43,19 @@ layout: default
         </ul>
       </div>
       
-      <div id="displayer">
-        <article class="displayer-article">
-        </article>
+      <div id="card-pool">
+        <ul id="card-list">
+          <li class="card-item">
+          </li>
+          <li class="card-item">
+          </li>
+          <li class="card-item">
+          </li>
+          <li class="card-item">
+          </li>
+          <li class="card-item">
+          </li>
+        </div>
       </div>
       
     </div>
