--- a/_sass/items_card.scss
+++ b/_sass/items_card.scss
@@ -1,10 +1,12 @@
 
 #card-list {
+  list-style-type: none;
   width: elementSize(card-list-width);
   position: relative;
 }
 
 .card-item {
+  transform: translate3d(0, 0, 0);
   margin: 0 ((100% - elementSize(card-item-width)) / 2);
   width: elementSize(card-item-width);
   height: elementSize(card-item-height);
@@ -13,8 +15,8 @@
   position: absolute;
   top: 90vh;
   transition:
-    top #{ 800 * $durationMulti }ms ease-out,
-    transform #{ 800 * $durationMulti }ms ease-out
+    top #{ 400 * $durationMulti }ms ease-out,
+    transform #{ 400 * $durationMulti }ms ease-out
   ;
 }
 
