--- a/_sass/items_card.scss
+++ b/_sass/items_card.scss
@@ -11,9 +11,11 @@
   width: elementSize(card-item-width);
   height: elementSize(card-item-height);
   background-color: bgColor(card-item);
+  // @include show-border();
   box-shadow: 0 0 1rem 0.4rem shadowColor(card-item);
   position: absolute;
   top: 90vh;
+  overflow: hidden;
   transition:
     top #{ 400 * $durationMulti }ms ease-out,
     transform #{ 400 * $durationMulti }ms ease-out
