--- a/_includes/helpers.html
+++ b/_includes/helpers.html
@@ -1,5 +1,5 @@
 <div class="helper helper-slider" id="helper-slider1"></div>
 <div class="helper helper-TTT"></div>
 
-<!-- <script src="/js/live.js"></script> -->
+<script src="/js/live.js"></script>
 <script src="/js/helpers.js"></script>
