--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -63,3 +63,4 @@ layout: default
 
 <script src="/js/sidebar.js"></script>
 <script src="/js/canvas.js"></script>
+<script src="/js/canvas_draw.js"></script>
