--- a/_sass/shared.scss
+++ b/_sass/shared.scss
@@ -25,3 +25,13 @@ canvas {
   left: 0;
 }
 
+.overlay {
+  display: none;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 255, 0.4);
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
