--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -44,14 +44,14 @@ layout: default
       </div>
       
       <div id="card-pool">
-        <ul id="card-list">
-          {% for post in site.posts %}
-            <li class="card-item">
-              <img src={{ post.cover }} width="100%" height="auto"></img>
-              <div class="overlay"></div>
-            </li>
-          {% endfor %}
-        </ul>
+        <!-- <ul id="card-list"> -->
+          <!-- {% for post in site.posts %} -->
+            <!-- <li class="card-item"> -->
+              <!-- <img src={{ post.cover }} width="100%" height="auto"></img> -->
+              <!-- <div class="overlay"></div> -->
+            <!-- </li> -->
+          <!-- {% endfor %} -->
+        <!-- </ul> -->
       </div>
       
     </div>
