--- a/_sass/items_tag.scss
+++ b/_sass/items_tag.scss
@@ -18,7 +18,8 @@
   background-attachment: fixed;
   background-size: 100% 100%;
   background-position: #{ $poolWidth*100 }vw 0;
-  border-radius: 0.5rem;
+  border-radius: 0.2rem;
+  opacity: 0.9;
   position: relative;
   transition: all #{ 800 * $durationMulti }ms ease-out;
 
